# GridPythia

./: .gitignore  README.md  gridpythia.service  install.sh  main.py  profile_rolling_followup_configs.py  profile_rolling_horizon.py  profile_solver.py  pyproject.toml  uninstall.sh
GridPythia/: __init__.py
GridPythia/config/: __init__.py  models.py  optimization.py  prediction.py  server.py
GridPythia/coordination/: __init__.py  inverter_coordinator.py
GridPythia/optimization/: plan.py  plots.py  runner.py  solution.py  solver.py
GridPythia/prediction/: __init__.py  base.py  cache.py  prediction.py  registry.py
GridPythia/prediction/electricprice/: energycharts.py  epexpredictor.py  fixed.py  import_.py  provider.py
GridPythia/prediction/feedintariff/: __init__.py  fixed.py  import_.py  provider.py
GridPythia/prediction/load/: accumulator.py  adaptive.py  appliance_tracker.py  config.py  profilecsv.py  profilejson.py  provider.py
GridPythia/prediction/plots/: __init__.py  _base.py  electricprice.py  feedintariff.py  load.py  pvforecast.py  weather.py
GridPythia/prediction/pvforecast/: akkudoktor.py  import_.py  openmeteo.py  provider.py
GridPythia/prediction/weather/: __init__.py  brightsky.py  import_.py  openmeteo.py  provider.py
GridPythia/server/: README.md  __init__.py  app.py  models.py  mqtt_gateway.py  plan_utils.py  scheduler.py  services.py  state.py
GridPythia/server/plugins/: __init__.py  registry.py
GridPythia/server/plugins/load_learning/: __init__.py  router.py  service.py
GridPythia/server/routers/: __init__.py  appliance.py  config.py  inverters.py  optimization.py  predictions.py  realtime.py
GridPythia/server/static/: index.html
GridPythia/services/: __init__.py  application.py  updater.py
GridPythia/simulation/: grid_interpolator.py  grid_simulation.py
GridPythia/simulation/devices/: __init__.py  battery.py  inverterbase.py
GridPythia/tsdb/: __init__.py  policies.py  storage.py
docs/architecture/: mqtt_server_architecture.md
src/config/: __init__.py
src/optimization/: interpolator.py  params.py  simulation.py  solver.py
src/optimization/genetic/: genetic.py  geneticparams.py  genomelayout.py  interpolator.py  params.py  prediction_adapter.py  simulation.py
src/optimization/linear/: __init__.py  solver.py
src/prediction/: __init__.py  base.py  interpolator.py  prediction.py
src/prediction/electricprice/: __init__.py  energycharts.py  fixed.py  import_.py  provider.py
src/prediction/feedintariff/: __init__.py  fixed.py  import_.py  provider.py
src/prediction/load/: __init__.py  config.py  fixed.py  import_.py  profilecsv.py  profilejson.py  provider.py
src/prediction/load/data/: load_profiles.json
src/prediction/pvforecast/: __init__.py  akkudoktor.py  forecastsolar.py  import_.py  openmeteo.py  provider.py
src/prediction/utils/: gui.py
src/prediction/weather/: __init__.py  brightsky.py  import_.py  openmeteo.py  provider.py
src/simulation/: grid_interpolator.py  grid_simulation.py
src/simulation/devices/: __init__.py  battery.py  homeappliance.py  inverterbase.py
src/utils/: visualize.py
test/: conftest.py  test_genomelayout.py  test_simulation.py
test/prediction/: test_electricprice.py  test_load.py  test_prediction.py  test_pvforecast.py  test_weather.py
tests/: conftest.py  test_scheduler_slot_shift.py
tests/coordination/: __init__.py  test_inverter_coordinator.py  test_scheduler_timing.py  test_server_config.py
tests/devices/: test_battery.py  test_inverterbase.py
tests/optimization/: solver_fixture_support.py  test_genomelayout.py  test_grid_interpolator.py  test_linear_solver.py  test_optimization_config.py  test_runner.py  test_simulation.py  test_solver_fixture_regression.py
tests/optimization/fixtures/: prediction_2026_04_06_48h_15m.json  prediction_2026_04_25_48h_15m.json
tests/optimization/perf/: test_solver_performance.py
tests/prediction/: test_base.py  test_electricprice.py  test_epexpredictor.py  test_feedintariff.py  test_load.py  test_load_profilecsv.py  test_load_profilejson.py  test_prediction.py  test_pvforecast.py  test_registry.py  test_weather.py
tests/services/: __init__.py  test_application.py  test_mqtt_gateway.py
tests/simulation/: test_battery.py  test_grid_interpolator.py  test_inverterbase.py  test_simulation.py
utils/: __init__.py  gui.py  profile_rolling_followup_configs.py  profile_rolling_horizon.py  ram_profiler.py  webgui.py
