[project]
name = "GridPythia"
version = "0.1.0"
description = "Home energy prediction and optimization system"
license = "PolyForm Noncommercial License 1.0.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy>=1.14,<=1.17.0",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "gitpython>=3.1",
    "open-meteo-solar-forecast>=0.1.29",
    "cvxpy-base>=1.8",
    "highspy>=1.13,<1.14",
    "holidays>=0.93",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "plotly>=5.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "paho-mqtt>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "matplotlib",
    "ty",
    "ruff",
    "pympler",
    "psutil",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["GridPythia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
exclude = [
    "tests",
    "scripts",
]
output-format = "full"

[tool.ruff.lint]
select = [
    "F",      # Enable all `Pyflakes` rules.
    "W",      # Enable all `Pyflakes` warnings.
    "D",      # Enable all `pydocstyle` rules (Google convention).
    "S",      # Enable all `flake8-bandit` rules (security).
    "B",      # Enable `flake8-bugbear`-style warnings (practical issues).
    "I",      # Import-related checks (imports, ordering).
]
ignore = [
    # On top of `pydocstyle (D)`
    "D100",   # undocumented-public-module: Missing docstring in public module
    "D101",   # undocumented-public-class: Missing docstring in public class
    "D102",   # undocumented-public-method: Missing docstring in public method
    "D103",   # undocumented-public-function: Missing docstring in public function
    "D104",   # undocumented-public-package: Missing docstring in public package
    "D105",   # undocumented-magic-method: Missing docstring in magic method
    "D106",   # undocumented-public-nested-class: Missing docstring in public nested class
    "D107",   # undocumented-public-init: Missing docstring in __init__
    "D417",   # undocumented-param: Missing argument description in the docstring for {definition}: {name}
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
root = ["."]
python = ".venv"

# piwheels provides pre-built ARM wheels (linux_armv7l) for Raspberry Pi / LuckFox targets.
# With piwheels as extra index, uv picks pre-built armv7l wheels instead of building from source.
[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
